# rust-prisma

./: .gitignore  Cargo.toml  README.md  nixpacks.toml
.cargo/: config.toml
prisma/: schema.prisma
prisma/migrations/20221214003329_init/: migration.sql
src/: main.rs
